--- a/src/aura/BoatTile/BoatTile.cmp
+++ b/src/aura/BoatTile/BoatTile.cmp
@@ -1,6 +1,10 @@
-<!--
- - Created by BRITENET on 15.05.2018.
- -->
-
 <aura:component description="BoatTile">
+    <aura:attribute name="boat" type="Boat__c"/>
+    <lightning:button class="tile">
+        <div style="{!'background-image: url(' + v.boat.Picture__c +');'}" class="innertile">
+            <div class="lower-third">
+                <h1 class="slds-truncate">{!v.boat.Contact__r.Name}</h1>
+            </div>
+        </div>
+    </lightning:button>
 </aura:component>
