Challenge 4 workin version before refactoring

--- a/src/aura/BoatSearch/BoatSearch.cmp
+++ b/src/aura/BoatSearch/BoatSearch.cmp
@@ -1,8 +1,9 @@
 <aura:component description="BoatSearch" implements="flexipage:availableForAllPageTypes" access="global">
+    <aura:handler name="formsubmit" event="c:FormSubmit" action="{!c.onFormSubmit}"/>
     <lightning:card title="Find a Boat" class="marginBot">
         <c:BoatSearchForm/>
     </lightning:card>
     <lightning:card title="Matching Boats">
-        <c:BoatSearchResults/>
+        <c:BoatSearchResults aura:id="searchResultComponent"/>
     </lightning:card>
 </aura:component>
