--- a/src/aura/BoatSearchResults/BoatSearchResults.cmp
+++ b/src/aura/BoatSearchResults/BoatSearchResults.cmp
@@ -2,14 +2,16 @@
     <aura:attribute name="boats" type="Boat__c[]"/>
     <aura:attribute name="noFound" type="Boolean" default="true"/>
     <aura:attribute name="boatTypeId" type="Id"/>
+    <aura:attribute name="selectedBoatId" type="Id"/>
     <aura:method name="search" access="public" action="{!c.doSearch}">
         <aura:attribute name="boatTypeId" type="Id"/>
     </aura:method>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="BoatSelect" event="c:BoatSelect" action="{!c.onBoatSelect}"/>
     <lightning:layout multipleRows="true" horizontalAlign="center">
-        <aura:iteration items="{!v.boats}" var="retrievedBoat">
+        <aura:iteration items="{!v.boats}" var="boat">
             <lightning:layoutItem size="3" padding="around-small">
-                <c:BoatTile boat="{!retrievedBoat}"/>
+                <c:BoatTile boat="{!boat}" selected="{! boat.Id == v.selectedBoatId ? 'true' : 'false'}"/>
             </lightning:layoutItem>
         </aura:iteration>
         <aura:if isTrue="{!v.noFound}">
