--- a/src/aura/BoatDetails/BoatDetails.cmp
+++ b/src/aura/BoatDetails/BoatDetails.cmp
@@ -1,6 +1,7 @@
 <aura:component description="BoatDetails" implements="flexipage:availableForAllPageTypes" access="global">
     <aura:attribute name="boat" type="Boat__c" access="public"/>
     <aura:attribute name="id" type="Id" access="public"/>
+    <aura:handler name="BoatReviewAdded" event="c:BoatReviewAdded" action="{!c.onBoatReviewAdded}"/>
     <aura:handler event="c:BoatSelected" action="{!c.onBoatSelected}"/>
     <force:recordData aura:id="service" recordId="{!v.id}" fields="Id, Name, Description__c, Price__c, Length__c, Contact__r.Name, Contact__r.Email, Contact__r.HomePhone,
             BoatType__r.Name, Picture__c" targetFields="{!v.boat}" recordUpdated="{!c.onRecordUpdated}" mode="VIEW"/>
