--- a/src/aura/BoatReviews/BoatReviews.cmp
+++ b/src/aura/BoatReviews/BoatReviews.cmp
@@ -1,2 +1,38 @@
-<aura:component description="BoatReviews">
+<aura:component description="BoatReviews" controller="BoatReviews">
+    <aura:attribute name="boat" type="Boat__c" access="public"/>
+    <aura:attribute name="boatReviews" type="BoatReview__c[]" access="private"/>
+    <aura:method name="refresh" action="{!c.doInit}" access="public"/>
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.boat}" action="{!c.refresh}"/>
+    <ui:scrollerWrapper class="scrollerSize">
+        <aura:if isTrue="{!v.boatReviews.length == 0}">
+            <lightning:layoutItem class="slds-align_absolute-center">
+                <ui:outputText value="No Reviews Available"/>
+            </lightning:layoutItem>
+        </aura:if>
+        <div class="slds-feed">
+            <ul class="slds-feed__list">
+                <aura:iteration items="{!v.boatReviews}" var="BoatReview">
+                    <li class="slds-feed__item">
+                        <div class="slds-media__body">
+                            <div class="slds-grid slds-has-flexi-truncate">
+                                <a href="javascript:void(0)" onclick="{!c.onUserInfoClick}"
+                                   data-userid="{!BoatReview.CreatedBy.Id}">
+                                        {!boatReview.CreatedBy.Name}
+                                </a>
+                                &nbsp; &mdash; &nbsp; {!BoatReview.CreatedBy.CompanyName}
+                            </div>
+                            <p><lightning:formattedDateTime value="{!BoatReview.CreatedDate}"
+                                                            year="numeric" month="short" day="numeric"
+                                                            hour="2-digit" minute="2-digit" hour12="true"/></p>
+                        </div>
+                    </li>
+                    <li class="slds-col slds-feed__item slds-m-right_medium">
+                            <c:FiveStarRating aura:id="FiveStarRating" value="{!BoatReview.Rating__c}" readonly="true"/>
+                        </li>
+
+                </aura:iteration>
+            </ul>
+        </div>
+    </ui:scrollerWrapper>
 </aura:component>
